--- a/PresentationLayer/MVCTESTSITE/MVCTESTSITE.csproj
+++ b/PresentationLayer/MVCTESTSITE/MVCTESTSITE.csproj
@@ -210,25 +210,28 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\bootstrap-grid.css" />
-    <Content Include="Content\bootstrap-grid.min.css" />
-    <Content Include="Content\bootstrap-reboot.css" />
-    <Content Include="Content\bootstrap-reboot.min.css" />
+    <Content Include="Content\bootstrap-theme.css" />
+    <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
+    <Content Include="Content\main1.css" />
+    <Content Include="Content\navigation.css" />
     <Content Include="Content\main.css" />
     <Content Include="Content\theme.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\fontawesome-webfont.svg" />
+    <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Scripts\bootstrap.bundle.js" />
-    <Content Include="Scripts\bootstrap.bundle.min.js" />
+    <Content Include="Scripts\king-chart-stat.js" />
+    <Content Include="Scripts\king-common.js" />
+    <Content Include="Scripts\king-components.js" />
+    <Content Include="Scripts\king-table.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\esm\popper-utils.js" />
@@ -244,21 +247,32 @@
     <Content Include="fonts\fontawesome-webfont.woff" />
     <Content Include="fonts\fontawesome-webfont.ttf" />
     <Content Include="fonts\fontawesome-webfont.eot" />
-    <Content Include="Scripts\bootstrap.min.js.map" />
-    <Content Include="Scripts\bootstrap.js.map" />
-    <Content Include="Scripts\bootstrap.bundle.min.js.map" />
-    <Content Include="Scripts\bootstrap.bundle.js.map" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Content\bootstrap.min.css.map" />
     <Content Include="Content\bootstrap.css.map" />
-    <Content Include="Content\bootstrap-reboot.min.css.map" />
-    <Content Include="Content\bootstrap-reboot.css.map" />
-    <Content Include="Content\bootstrap-grid.min.css.map" />
-    <Content Include="Content\bootstrap-grid.css.map" />
-    <None Include="Scripts\jquery-3.3.1.intellisense.js" />
-    <Content Include="Scripts\jquery-3.3.1.js" />
-    <Content Include="Scripts\jquery-3.3.1.min.js" />
-    <Content Include="Scripts\jquery-3.3.1.slim.js" />
-    <Content Include="Scripts\jquery-3.3.1.slim.min.js" />
+    <Content Include="Content\bootstrap-theme.min.css.map" />
+    <Content Include="Content\bootstrap-theme.css.map" />
+    <None Include="Scripts\jquery-2.1.0.intellisense.js" />
+    <Content Include="Scripts\jquery-2.1.0.js" />
+    <Content Include="Scripts\jquery-2.1.0.min.js" />
+    <Content Include="Scripts\Plugins\bootstrap-tour\bootstrap-tour.custom.js" />
+    <Content Include="Scripts\Plugins\datatable\dataTables.bootstrap.js" />
+    <Content Include="Scripts\Plugins\datatable\jquery.dataTables.min.js" />
+    <Content Include="Scripts\Plugins\jquery-mapael\jquery.mapael.js" />
+    <Content Include="Scripts\Plugins\jquery-slimscroll\jquery.slimscroll.min.js" />
+    <Content Include="Scripts\Plugins\jquery-sparkline\jquery.sparkline.min.js" />
+    <Content Include="Scripts\Plugins\modernizr\modernizr.js" />
+    <Content Include="Scripts\Plugins\raphael\raphael-2.1.0.min.js" />
+    <Content Include="Scripts\Plugins\raphael\usa_states.js" />
+    <Content Include="Scripts\Plugins\stat\jquery.easypiechart.min.js" />
+    <Content Include="Scripts\Plugins\stat\jquery.flot.min.js" />
+    <Content Include="Scripts\Plugins\stat\jquery.flot.pie.min.js" />
+    <Content Include="Scripts\Plugins\stat\jquery.flot.resize.min.js" />
+    <Content Include="Scripts\Plugins\stat\jquery.flot.time.min.js" />
+    <Content Include="Scripts\Plugins\stat\jquery.flot.tooltip.min.js" />
     <Content Include="Scripts\umd\popper-utils.js" />
     <Content Include="Scripts\umd\popper-utils.min.js" />
     <Content Include="Scripts\umd\popper.js" />
@@ -320,8 +334,7 @@
   <ItemGroup>
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
-    <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
-    <Content Include="Scripts\jquery-3.3.1.min.map" />
+    <Content Include="Scripts\jquery-2.1.0.min.map" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
